[package]
name = "rust_sdstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
interprocess = "1.2.1"
log = "0.4.10"
serde = {version = "^1.0.63", features = ["derive"]}
simplelog = { version = "^0.12.0", features = ["paris"] }
sliding_windows = "3.0.0"